# jumpstart.todo

./: .gitignore  .todoconf  README.md  pyproject.toml
src/jumpstart_todo/: cli.py  config.py  registry.py
src/jumpstart_todo/data/: default_config.toml
