[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jumpstart.todo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
]

[project.scripts]
todo = "jumpstart_todo.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "ruff",
]

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.default.scripts]
test = "pytest tests/ -v"
lint = "ruff check src/"
typecheck = "mypy src/"
